// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paths Object examples > empty paths > generates no operation-derived types when paths is empty 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';"
`;

exports[`Paths Object examples > empty paths > produces a valid empty client when paths is empty 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Paths Object examples > multiple paths > generates methods for all paths in the spec 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetProductsResponse, GetUsersResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * List users
     */
    getUsers: decorateWithErrors<() => Promise<GetUsersResponse>, never>(
      async (): Promise<GetUsersResponse> => {
        try {
          const result = await requester<GetUsersResponse>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    /**
     * List products
     */
    getProducts: decorateWithErrors<() => Promise<GetProductsResponse>, never>(
      async (): Promise<GetProductsResponse> => {
        try {
          const result = await requester<GetProductsResponse>("GET", \`/products\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Paths Object examples > multiple paths > generates separate contracts types for each path 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type GetUsersResponse = { total?: number; };

export type GetProductsResponse = { count?: number; };"
`;
